simply version increments. increment version to 0.10.1